Move randomize button to top of form

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
 
             <form id="persona-form">
 
+                <!-- Randomize button (top) -->
+<div class="form-actions top">
+    <button type="button" id="randomize-button" class="randomize-button">
+        Randomize fields <i class="fas fa-dice"></i>
+    </button>
+</div>
+
                 <div class="input-group">
                     <h3 class="group-title">Basic Information</h3>
                     <div class="form-grid">
@@ -118,13 +125,6 @@
                             <input type="number" id="social" min="1" max="100" value="55">
                         </div>
                     </div>
-                </div>
-
-                <!-- Randomize button -->
-                <div class="form-actions">
-                    <button type="button" id="randomize-button" class="randomize-button">
-                        Randomize fields <i class="fas fa-dice"></i>
-                    </button>
                 </div>
 
                 <button type="submit" class="generate-button">
