Position randomize button in form header

--- a/index.html
+++ b/index.html
@@ -36,8 +36,16 @@
 
     <main>
         <section id="input-section" class="modern-card">
-            <h2>Create Your Persona</h2>
-            <p class="tagline">Define your user with precision and modern design.</p>
+            <div class="form-header">
+    <div>
+        <h2>Create Your Persona</h2>
+        <p class="tagline">Define your user with precision and modern design.</p>
+    </div>
+
+    <button type="button" id="randomize-button" class="randomize-button">
+        Randomize fields <i class="fas fa-dice"></i>
+    </button>
+</div>
 
             <form id="persona-form">
 
