Fix duplicate randomize button and clean layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T8XL92N8"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe>
+                height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
@@ -36,26 +36,19 @@
 
     <main>
         <section id="input-section" class="modern-card">
-            <div class="form-header">
-    <div>
-        <h2>Create Your Persona</h2>
-        <p class="tagline">Define your user with precision and modern design.</p>
-    </div>
 
-    <button type="button" id="randomize-button" class="randomize-button">
-        Randomize fields <i class="fas fa-dice"></i>
-    </button>
-</div>
+            <div class="form-header">
+                <div>
+                    <h2>Create Your Persona</h2>
+                    <p class="tagline">Define your user with precision and modern design.</p>
+                </div>
+
+                <button type="button" id="randomize-button" class="randomize-button">
+                    Randomize fields <i class="fas fa-dice"></i>
+                </button>
+            </div>
 
             <form id="persona-form">
-
-                <!-- Randomize button (top) -->
-<div class="form-actions top">
-    <button type="button" id="randomize-button" class="randomize-button">
-        Randomize fields <i class="fas fa-dice"></i>
-    </button>
-</div>
-
                 <div class="input-group">
                     <h3 class="group-title">Basic Information</h3>
                     <div class="form-grid">
@@ -79,7 +72,7 @@
 
                     <div class="form-group full-width">
                         <label for="bio">Bio / Short Quote:</label>
-                        <textarea id="bio" rows="2" required>"I'm looking for a tool that will simplify the planning of our digital ad campaigns."</textarea>
+                        <textarea id="bio" rows="2" required>I'm looking for a tool that will simplify the planning of our digital ad campaigns.</textarea>
                     </div>
                 </div>
 
